# music

./: RT.py  T.py  appdata.json  config.json  config.py  core.py  exception_handle.py  models.py  modles.py  task_thread.py  test.py  thread_tools.py  util.py
A/: a1.py
api/netease/: api.py  config.py  models.py  util.py
api/qq/: api.py  models.py
api/xiami/: api.py  js.js  中国话-S.H.E, 中国话MP3下载,歌词下载 - 虾米音乐.html  正在播放 不想长大-S.H.E.html
api/xiami/中国话-S.H.E, 中国话MP3下载,歌词下载 - 虾米音乐_files/: a  a.js  a_003.css  stat_002.php
api/xiami/正在播放 不想长大-S.H.E_files/: a_002.css  core_002.php  stat_002.php  test.html
music_ui/: CMakeLists.txt  Interface.h  library.cpp  library.h  main.cpp  music_ui
music_ui/cpp/components/: ProcessBar.cpp  ProcessBar.h
netease/: api.py  config.py  encrypt.py  models.py  util.py
qq/: action.json  api.py  models.py
sql/sqlite/: music.sqlite3
ui/: Default.qss  __init__.py  awesome.py  components.py  config.py
ui/components/: __init__.py  base_component.py  lyric.py  mainwindow.py  playbar.py  searchtable.py  songlist.py  songtable.py  titlebar.py
xiami/: api.py  config.py  result.html  中国话-S.H.E, 中国话MP3下载,歌词下载 - 虾米音乐.html  正在播放 不想长大-S.H.E.html
xiami/中国话-S.H.E, 中国话MP3下载,歌词下载 - 虾米音乐_files/: a.css  a_002  a_002.css  base.css  base.js  jquery.js  jquery_003.js  music.css  name_card.css  name_card_old.js
xiami/正在播放 不想长大-S.H.E_files/: a  a.css  a.js  core.php  js.js  old.css  third.js
